--- a/src/Blazor.Gitter.AndroidApp/wwwroot/index.html
+++ b/src/Blazor.Gitter.AndroidApp/wwwroot/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>Blazored Gitter - Client Side</title>
+	<title>Blazored Gitter - Android</title>
 	<base href="/" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-	<link href="css/blazor.gitter.css" rel="stylesheet" />
+	<link href="css/blazored.gitter.min.css" rel="stylesheet" />
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
