--- a/src/Blazor.Gitter.Client/wwwroot/index.html
+++ b/src/Blazor.Gitter.Client/wwwroot/index.html
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 	</app>
-
+	<script src="scripts/chat.js"></script>
 	<script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
