--- a/src/Blazor.Gitter.IosApp/Resources/wwwroot/index.html
+++ b/src/Blazor.Gitter.IosApp/Resources/wwwroot/index.html
@@ -22,7 +22,7 @@
 			</div>
 		</div>
 	</app>
-
+	<script src="scripts/chat.js"></script>
 	<script src="framework://blazor.desktop.js"></script>
 </body>
 </html>
