--- a/src/Blazor.Gitter.WindowsApp/wwwroot/index.html
+++ b/src/Blazor.Gitter.WindowsApp/wwwroot/index.html
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 	</app>
-
+	<script src="scripts/chat.js"></script>
 	<script src="framework://blazor.desktop.js"></script>
 </body>
 </html>
